# RandomBot

./: .env  .gitignore  README.md  badwords.txt  main.py  pyproject.toml  serv.py
backups/: backup  backupbyw  backupsen  cogs
cogs/: Choosers.py  DevOnly.py  Events.py  Generators.py  Hidden.py  Shards.py  Shufflers.py  Values.py
static/: broken-sw.js  manifest.json  robots.txt  sitemap.xml
static/styles/: buttons.css
templates/: 404.html  index.html  invite.html  logs.html  permsinput.html  rickroll.html  spambobux.html  support.html
templates/errors/: 404.html  500.html  cf504.html
templates/gift/: KLUWudK7Zb2rm3A.html
